grid fixed also on iphone mobile landscape

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -597,8 +597,11 @@ body.compact .grid {
   .work__content img,
   .poem__content img {
     width: 100%; }
-    .mobile {
+    .desktop {
       display: none;
+    }
+    .mobile {
+      display: block;
     }
   }
 
